--- a/package/metadata.desktop
+++ b/package/metadata.desktop
@@ -1,13 +1,13 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Network Bandwidth Monitor Widget
+Name=Network Bandwidth Monitor
 Comment=dbus powered Network bandwidth monitor.
 Type=Service
 X-KDE-ParentApp=
 X-KDE-PluginInfo-Author=LeeVD
 X-KDE-PluginInfo-Email=thoth360@hotmail.com
 X-KDE-PluginInfo-License=GPL3
-X-KDE-PluginInfo-Name=org.kde.package
+X-KDE-PluginInfo-Name=org.kde.NetBandwidthMonitor
 X-KDE-PluginInfo-Version=0.1
 X-KDE-PluginInfo-Website=https://github.com/leevd
 X-KDE-ServiceTypes=Plasma/Applet
